   get_status() Process methods.
 * Issue 305: (BSD) psutil can't compile on FreeBSD 9 due to removal of utmp.h.
 * Issue 306: at C level, errors are not checked when invoking Py* functions
   which create or manipulate Python objects leading to potential memory related
   errors and/or segmentation faults.
 * Issue 307: (BSD) values returned by psutil.network_io_counters() are wrong.
 * Issue 308: (BSD) psutil.virtmem_usage() wasn't actually returning 
   information about swap memory usage. It does now.


0.5.1 - 2012-06-29
------------------

NEW FEATURES

 * Issue 293: (Windows) process executable path is now determined by asking the
   OS instead of being guessed from process cmdline.

BUGFIXES

 * Issue 292: (Linux) race condition in process files/threads/connections.
 * Issue 294: (Windows) Process CPU affinity is only able to set CPU #0.


0.5.0 - 2012-06-27
------------------

NEW FEATURES

 * Issue #195: (Windows) number of handles opened by process.
 * Issue #209: psutil.disk_partitions() now provides also mount options.
 * Issue #229: list users currently connected on the system (psutil.get_users()).
 * Issue #238: (Linux, Windows) process CPU affinity (get and set).
 * Issue #242: Process.get_children(recursive=True): return all process
   descendants.
 * Issue #245: (POSIX) Process.wait() incrementally consumes less CPU cycles.
 * Issue #257: (Windows) removed Windows 2000 support.
 * Issue #258: (Linux) Process.get_memory_info() is now 0.5x faster.
 * Issue #260: process's mapped memory regions. (Windows patch by wj32.64, OSX
   patch by Jeremy Whitlock)
 * Issue #262: (Windows) psutil.disk_partitions() was slow due to inspecting
   the floppy disk drive also when "all" argument was False.
 * Issue #273: psutil.get_process_list() is deprecated.
 * Issue #274: psutil no longer requires 2to3 at installation time in order to
   work with Python 3.
 * Issue #278: new Process.as_dict() method.