@@ -48,8 +48,14 @@ BUGFIXES
    which create or manipulate Python objects leading to potential memory related
    errors and/or segmentation faults.
  * Issue 307: (BSD) values returned by psutil.network_io_counters() are wrong.
- * Issue 308: (BSD) psutil.virtmem_usage() wasn't actually returning 
-   information about swap memory usage. It does now.
+ * Issue 308: (BSD / Windows) psutil.virtmem_usage() wasn't actually returning
+   information about swap memory usage as it was supposed to do. It does now.
+
+API CHANGES
+
+ * psutil.virtmem_usage() is deprecated in favor of psutil.swapmem_usage()
+ * (Windows and BSD) psutil.virtmem_usage() now returns information about swap
+   memory instead of virtual memory.
 
 
 0.5.1 - 2012-06-29
